Updating some layout issues

--- a/webapp/src/app/view/history/history.css
+++ b/webapp/src/app/view/history/history.css
@@ -11,7 +11,8 @@
   padding: 0 !important;
 }
 
-.col-filter {
+.col-filter,
+.row-filter {
   align-self: center;
 }
 
